...
            </Pressable>
          ) : null}
        </View>
      ) : null}
      {showContinue ? (
        <Pressable
          testID="oneitem_continue_button"
          style={[
            styles.continueButton,
            continueDisabled && styles.continueButtonDisabled,
          ]}
          onPress={onContinue}
          disabled={continueDisabled}
...
